Fix alignment of remove buttons in the play list

--- a/cmd/tchaik/ui/static/sass/components/playlist.scss
+++ b/cmd/tchaik/ui/static/sass/components/playlist.scss
@@ -35,7 +35,7 @@ div.playlist {
           display: flex;
           justify-content: center;
           align-items: center;
-          flex-diection: column;
+          flex-direction: column;
           margin-right: 9px;
         }
 
