--- a/cmd/tchaik/ui/static/sass/components/retro.scss
+++ b/cmd/tchaik/ui/static/sass/components/retro.scss
@@ -53,7 +53,7 @@ div.retro {
 
           li {
             border-bottom: 0;
-            padding: 6px;
+            padding: 9px;
           }
         }
 
